# crosswords

./: .gitignore  mypy.ini  plan.md  prompting.md  pyproject.toml  run_tests  run_tests.sh  spec.md  tasks.md  test_conventions.sh  test_wordplay.sh  testing.md  validation.md
.claude/: handoff.md  settings.json
clue_gen/: README.md  cli.py  client.py  generator.py  input_parsing.py  prompt.py  quality.py  solvability.py  validator.py  word_parser.py
clue_gen/tests/: fake_client.py  test_cli.py  test_generator.py  test_input_parsing.py  test_prompt.py  test_quality.py  test_solvability.py  test_validator.py  test_word_parser.py
clue_gen_cloud/: .gitignore  CLUE_SPEC.md  README.md  claude_cli.py  kickoff.md  mechanical_checks.py  pipeline.py  prompt_rendering.py  tasks.md  test_bank_state.py  test_claude_cli.py  test_mechanical_checks.py  test_prompt_rendering.py  words.in
clue_gen_cloud/prompts/: generate.md  verify.md
cluegen/: pyproject.toml
cluegen/cloud/: CLUE_SPEC.md  __init__.py  bank_state.py  mechanical_checks.py  mypy.ini  pipeline.py  prompt_rendering.py  run_tests  run_tests.sh  tasks.md  test_bank_state.py  test_claude_cli.py  test_mechanical_checks.py  test_prompt_rendering.py
cluegen/cloud/prompts/: verify.md
cluegen/local/: README.md  cli.py  client.py  generator.py  plan.md  prompt.py  quality.py  run_tests  run_tests.sh  smoke_test.txt  solvability.py  tasks.md  toolchains.md  validation.md  validator.py
cluegen/local/archive/: chatgpt-braindump.md
cluegen/local/cluegen/: client.py  generator.py  parsing.py
cluegen/local/cluegen/tests/: fake_client.py  test_prompt.py  test_quality.py
cluegen/local/tests/: fake_client.py  test_cli.py  test_generator.py  test_input_parsing.py  test_prompt.py  test_quality.py  test_solvability.py
cluegen/scratch/: probe_conventions.py  probe_make_clue.py  probe_minimal.py  probe_quality_multi.py  probe_quality_single.py  probe_think_switch.py  probe_wordplay.py  southward_group_examples.txt
cluegen/scratch/lib/: harness.py
prototyping/: minimal-repro.py  minimal.py  probe_make_clue.py  probe_quality_multi.py  probe_quality_single.py
prototyping/lib/: harness.py
scripts/: minimal.py  probe_conventions.py  probe_minimal.py  probe_quality_single.py  probe_wordplay.py
scripts/lib/: harness.py
