# Copyright 2026 Ilya Sherman (ishermandom@)
# SPDX-License-Identifier: MIT
#
# Why this is a pip package: local/ has a runtime dependency on openai (the
# HTTP client for Ollama's OpenAI-compatible API), so pip install is the
# natural way to manage it and wire up the clue-gen CLI entry point. cloud/
# shells out to claude directly and has no pip dependencies, so it stays as
# flat scripts.
#
# Why pyproject.toml lives at cluegen/ rather than cluegen/local/: the
# package is published as the cluegen.local namespace, which requires hatchling
# to remap the local/ source directory to cluegen/local/ when building. That
# remapping is expressed in [tool.hatch.build.targets.*] below.

[project]
name = "clue-gen"
version = "0.1.0"
requires-python = ">=3.11"

# openai is a runtime dep: it's the HTTP client we use to talk to Ollama's
# OpenAI-compatible API. >=1.0 because that release replaced the old module-
# level API (openai.ChatCompletion.create) with the openai.OpenAI() client
# class that we rely on.
dependencies = [
  "openai>=1.0",
]

[project.scripts]
clue-gen = "cluegen.local.cli:main"

# ruff and mypy are dev-only: they're never imported at runtime, so keeping
# them out of [project.dependencies] avoids inflating the install footprint
# for anyone who just wants to run the tool. Install with:
#   pip install -e ".[dev]"
# Version floors here are "recent stable release" — no specific feature
# dependency, just avoiding ancient versions with known rough edges.
[project.optional-dependencies]
dev = [
  "mypy>=1.0",
  "pytest>=8.0",
  "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["local/tests"]
markers = [
  "wip: mark a test as work-in-progress; skipped when run from hooks",
]

# packages names the source directory to include; sources remaps it from
# local/ to cluegen/local/ in the installed distribution, establishing the
# cluegen.local namespace. cluegen/ itself is an implicit namespace package
# (no __init__.py needed).
[tool.hatch.build.targets.wheel]
packages = ["local"]

[tool.hatch.build.targets.wheel.sources]
"local" = "cluegen/local"

[tool.hatch.build.targets.editable]
mode = "strict"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
